--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       <tr>
         <td>
           <div id="GamePIN">
+            <h1>GamePin: 1</h1>
           </div>
         </td>
         <td>
@@ -29,6 +30,7 @@
         </td>
         <td>
           <div id="QR">
+            <img src="https://duckduckgo.com/i/22c345d7.png"/>
           </div>
         </td>
       </tr>
