--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
   </head>
   <body>
-    <table width="100%">
+    <table id="outerTable">
       <tr>
         <td>
           <div id="GamePIN">
@@ -34,40 +34,50 @@
           </div>
         </td>
       </tr>
-    </table>
-    <div id="wrapper">
-      <div id="left">
-        <h1>Leaderboard</h1>
-        <i>most flaps</i>
-        <div id="leaderboard"></div>
-        <script type="text/babel" src="scripts/leaderboard.js"></script>
-      </div>
-      <div id="middle">
-        <h1>Nerds Live!</h1>
-        <div id="nerdslive"></div>
-        <script type="text/babel" src="scripts/nerdslive.js"></script>
-      </div>
-      <div id="right">
-        <h1>Game Mode</h1>
-        <form action="">
-          <input type="radio" name="gm" value="timetrial"> Time Trial
-          <br> Time:
-          <input type="time" name="firstname">
-          <br>
-          <input type="radio" name="gm" value="airtime"> AirTime Challenge
-          <br> Height:
-          <input type="number" name="firstname" style="width:45%">
-          <br>
-          <br>
-          <div style="text-align: center;">
-            <input id="fly" type="image" src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/FlappyNerd/app/src/main/res/mipmap-xxxhdpi/button_off.png" alt="Submit" width="30%" height="30%" style="margin-right:2em;">
-            <input id="reset" type="image" src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/UI/Button_reset_off.png" width="30%" height="30%">
+      <tr>
+        <td>
+          <div id="left">
+            <h1>Leaderboard</h1>
+            <i>most flaps</i>
+            <div id="leaderboard"></div>
+            <script type="text/babel" src="scripts/leaderboard.js"></script>
           </div>
-        </form>
-      </div>
-    </div>
-
-    <div id="footer">
-      <a href="https://github.com/cnHeider/FlappyNerdServer">Github</a>
-    </div>
+        </td>
+        <td>
+          <div id="middle">
+            <h1>Nerds Live!</h1>
+            <div id="nerdslive"></div>
+            <script type="text/babel" src="scripts/nerdslive.js"></script>
+          </div>
+        </td>
+        <td>
+          <div id="right">
+            <h1>Game Mode</h1>
+            <form action="">
+              <input type="radio" name="gm" value="timetrial"> Time Trial
+              <br> Time:
+              <input type="time" name="firstname">
+              <br>
+              <input type="radio" name="gm" value="airtime"> AirTime Challenge
+              <br> Height:
+              <input type="number" name="firstname" style="width:45%">
+              <br>
+              <br>
+              <div style="text-align: center;">
+                <input id="fly" type="image" src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/FlappyNerd/app/src/main/res/mipmap-xxxhdpi/button_off.png" alt="Submit" width="30%" height="30%" style="margin-right:2em;">
+                <input id="reset" type="image" src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/UI/Button_reset_off.png" width="30%" height="30%">
+              </div>
+            </form>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="3">
+          <div id="footer">
+            <a href="https://github.com/cnHeider/FlappyNerdServer">Github</a>
+          </div>
+        </td>
+      </tr>
+    <table>
+  </body>
 </html>
