--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <body>
     <table id="outerTable">
       <tr>
-        <td>
+        <td width="22%">
           <div id="GamePIN">
             <h1>GamePin: 1</h1>
           </div>
@@ -28,7 +28,7 @@
             </a>
           </div>
         </td>
-        <td>
+        <td width="22%">
           <div id="QR">
             <img src="https://duckduckgo.com/i/22c345d7.png"/>
           </div>
