--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
           </div>
         </td>
         <td>
-          <div id="header">
+          <div id="header" height ="16%">
             <a href="#" id="header_logo" title="FlappyNerd_logo">
               <img src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/UI/logo.png?					token=APRoYt65232cqhaYCal3QcUUqLDfnJeeks5XEqDdwA%3D%3D" />
               <img src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/app/src/main/res/mipmap-xxxhdpi/logotext.png" />
