--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>FlappyNerd</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/flappynerd.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
