--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       <tr>
         <td width="22%">
           <div id="GamePIN">
-            <h1>3842</h1>
+            <script type="text/babel" src="scripts/gameid.js"></script>
           </div>
         </td>
         <td height="18%">
@@ -41,7 +41,7 @@
         </td>
         <td width="22%">
           <div id="QR">
-            <img src="https://duckduckgo.com/i/22c345d7.png"/>
+            <a href="https://play.google.com/store/apps/details?id=net.cnheider.flappynerd"><img src="https://duckduckgo.com/i/22c345d7.png"/></a>
           </div>
           <a href='http://play.google.com/store?utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
         </td>
