--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
         </td>
         <td width="22%">
           <div id="QR">
-            <a href="https://play.google.com/store/apps/details?id=net.cnheider.flappynerd"><img src="https://duckduckgo.com/i/22c345d7.png"/></a>
+            <img src="https://duckduckgo.com/i/22c345d7.png"/>
+            <a href='https://play.google.com/store/apps/details?id=net.cnheider.flappynerd&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
           </div>
-          <a href='http://play.google.com/store?utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a>
         </td>
       </tr>
       <tr>
