--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
         </td>
         <td width="22%">
           <div id="QR">
-            <img src="https://duckduckgo.com/i/22c345d7.png"/>
+            <img src="https://duckduckgo.com/i/22c345d7.png" width="auto"/>
             <br />
-            <a href='https://play.google.com/store/apps/details?id=net.cnheider.flappynerd&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+            <a href='https://play.google.com/store/apps/details?id=net.cnheider.flappynerd&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' width="auto">
               <img alt='Get it on Google Play' src='google-play-badge.png' width="auto"/>
             </a>
           </div>
