--- a/public/index.html
+++ b/public/index.html
@@ -41,10 +41,10 @@
         </td>
         <td width="22%">
           <div id="QR">
-            <img src="https://duckduckgo.com/i/22c345d7.png" width="auto"/>
+            <img src="https://duckduckgo.com/i/22c345d7.png"/>
             <br />
-            <a href='https://play.google.com/store/apps/details?id=net.cnheider.flappynerd&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1' width="auto">
-              <img alt='Get it on Google Play' src='google-play-badge.png' width="auto"/>
+            <a href='https://play.google.com/store/apps/details?id=net.cnheider.flappynerd&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+              <img alt='Get it on Google Play' src='google-play-badge.png' width="50px"/>
             </a>
           </div>
         </td>
