--- a/public/index.html
+++ b/public/index.html
@@ -70,17 +70,16 @@
             <h1>Game Mode</h1>
             <form action="">
               <input type="radio" name="gm" value="timetrial"> Time Trial
-              <br> Time:
+              <br /> Time:
               <input type="time" name="firstname">
-              <br>
+              <br />
               <input type="radio" name="gm" value="airtime"> AirTime Challenge
-              <br> Height:
+              <br /> Height:
               <input type="number" name="firstname" style="width:45%">
-              <br>
-              <br>
+              <br />
               <div style="text-align: center;">
-                <input id="fly" type="image" src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/FlappyNerd/app/src/main/res/mipmap-xxxhdpi/button_off.png" alt="Submit" width="30%" height="30%" style="margin-right:2em;">
-                <input id="reset" type="image" src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/UI/Button_reset_off.png" width="30%" height="30%">
+                <input id="fly" type="image" src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/FlappyNerd/app/src/main/res/mipmap-xxxhdpi/button_off.png" alt="Submit" width="26%" height="26%" style="margin-right:2em;">
+                <input id="reset" type="image" src="https://raw.githubusercontent.com/cnHeider/FlappyNerd/master/UI/Button_reset_off.png" width="26%" height="26%">
               </div>
             </form>
           </div>
